# cookiecutter-kata-cpputest

./: README.md
{{ cookiecutter.kata|lower }}/: CMakeLists.txt  README.md
{{ cookiecutter.kata|lower }}/test/: {{ cookiecutter.kata }}Test.cpp
